[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/lobbyPlayerList.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/diceOrder.gd" type="Script" id=2]
[ext_resource path="res://Resources/dices.png" type="Texture" id=3]
[ext_resource path="res://Scripts/randomizedTexture2D.gd" type="Script" id=4]
[ext_resource path="res://Resources/Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/AUX_title_screen/fonts/montserrat_eb_30.tres" type="DynamicFont" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerList" parent="." instance=ExtResource( 1 )]
margin_bottom = 350.0

[node name="Dado1" type="Sprite" parent="."]
position = Vector2( -1095.46, 435.32 )
scale = Vector2( 2.55589, 2.55589 )
texture = ExtResource( 3 )
vframes = 2
hframes = 3
script = ExtResource( 4 )

[node name="Dado2" type="Sprite" parent="."]
position = Vector2( -790.449, 435.32 )
scale = Vector2( 2.55589, 2.55589 )
texture = ExtResource( 3 )
vframes = 2
hframes = 3
script = ExtResource( 4 )

[node name="Dado3" type="Sprite" parent="."]
position = Vector2( -462.528, 435.32 )
scale = Vector2( 2.55589, 2.55589 )
texture = ExtResource( 3 )
vframes = 2
hframes = 3
script = ExtResource( 4 )

[node name="Dado4" type="Sprite" parent="."]
position = Vector2( -140.333, 435.32 )
scale = Vector2( 2.55589, 2.55589 )
texture = ExtResource( 3 )
vframes = 2
hframes = 3
script = ExtResource( 4 )

[node name="buttons" type="HBoxContainer" parent="."]
anchor_top = 0.853
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 156.0
margin_top = 9.84003
margin_right = -155.0
margin_bottom = -9.0
custom_constants/separation = 300
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="buttons" instance=ExtResource( 5 )]
margin_right = 334.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Atrás"

[node name="roll" parent="buttons" instance=ExtResource( 5 )]
margin_left = 634.0
margin_right = 969.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Tirar dado"

[node name="Label" type="Label" parent="."]
margin_left = 264.638
margin_top = 549.633
margin_right = 992.638
margin_bottom = 606.633
custom_fonts/font = ExtResource( 6 )
text = "El primero con un Score de 15000 o más gana
También gana el último que quede si todos entran en bancarrota"
align = 1
valign = 1
[connection signal="pressed" from="buttons/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="buttons/roll" to="." method="_on_roll_pressed"]
